# glusterfs

./: .gitignore  configure.ac  glusterfs.spec.in  rfc.sh
extras/hook-scripts/create/post/: S10selinux-label-brick.sh
extras/hook-scripts/delete/pre/: S10selinux-del-fcontext.sh
libglusterfs/src/: common-utils.c  common-utils.h  dict.c  generator.py  glfs-message-id.h
rpc/rpc-transport/socket/src/: socket.c
rpc/xdr/src/: glusterfs3.h  glusterfs4-xdr.x  rpc-common-xdr.x
xlators/cluster/afr/src/: afr-self-heal-common.c
xlators/cluster/stripe/src/: stripe.c
xlators/experimental/posix2/common/src/: Makefile.am  posix2-common-fops-h.py  posix2-helpers.c  posix2-helpers.h  posix2-inode-handle.h  posix2-unsupported-fops-c.py  posix2-unsupported-fops-h.py  posix2-unsupported-fops-tmpl.c  posix2-unsupported-fops-tmpl.h
xlators/experimental/posix2/ds/src/: Makefile.am  posix2-ds-fops.c  posix2-ds-fops.h  posix2-ds-main.c
xlators/experimental/posix2/mds/src/: Makefile.am  posix2-entry-ops.c  posix2-entry-ops.h  posix2-mds-main.c
xlators/experimental/rio/rio-client/src/: Makefile.am  rio-client-autogen-fops-tmpl.c  rio-client-autogen-fops-tmpl.h  rio-client-fops-c.py  rio-client-fops-h.py  rio-client-main.c  rio-client.h
xlators/experimental/rio/rio-common/src/: layout-inodehash-bucket.c  layout-static-bucket.c  layout.c  layout.h  rio-common-helpers.c  rio-common-helpers.h  rio-common-init.c  rio-common.h  rio-mem-types.h  rio-messages.h
xlators/experimental/rio/rio-server/src/: Makefile.am  rio-server-common.c  rio-server-common.h  rio-server-ds-autogen-fops-tmpl.c  rio-server-ds-autogen-fops-tmpl.h  rio-server-ds-fops-c.py  rio-server-ds-fops-h.py  rio-server-ds-fops.c  rio-server-ds-fops.h  rio-server-ds-main.c  rio-server-fops.c  rio-server-fops.h  rio-server-main.c  rio-server-mds-fops.c  rio-server-mds-fops.h  rio-server-mds-main.c
xlators/experimental/rio/scripts/rio-volfile-generator/: VolFileParser.py
xlators/features/marker/src/: marker.c
xlators/features/quota/src/: quota.c
xlators/features/sdfs/src/: sdfs.c  sdfs.h
xlators/features/snapview-client/src/: snapview-client.c
xlators/mgmt/glusterd/src/: glusterd-volume-set.c
xlators/protocol/client/src/: client-common.c  client-helpers.c  client-rpc-fops.c  client-rpc-fops_v2.c  client.h
xlators/protocol/server/src/: server-common.c  server-common.h  server-helpers.c  server-helpers.h  server-rpc-fops.c  server-rpc-fops_v2.c  server.h
xlators/storage/posix/src/: posix-entry-ops.c  posix-handle.h  posix-helpers.c  posix-inode-fd-ops.c  posix.h
